# Mind-Pattern-Analyzer

./: .replit  README.md  pnpm-lock.yaml  pyproject.toml  replit.md
.agents/: agent_assets_metadata.toml
.agents/memory/: MEMORY.md  db-table-naming.md  fastapi-backend.md
artifacts/api-server/: main.py  package.json  requirements.txt
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/api-server/app/core/: config.py  database.py  security.py
artifacts/api-server/app/models/: checkin.py  insight.py  journal.py  safety_event.py  user.py
artifacts/api-server/app/repositories/: checkin.py  insight.py  journal.py  safety_event.py  user.py
artifacts/api-server/app/routes/: auth.py  checkins.py  (+4 more)
artifacts/api-server/tests/: conftest.py  test_checkin_daily.py  test_checkin_dates.py  test_insights_with_data.py  test_journal_create.py  test_journal_delete.py  test_journal_view.py  test_nlp.py  test_pattern_analysis.py  test_privacy.py  test_security.py
artifacts/mindpattern/: index.html  package.json
artifacts/mindpattern/.replit-artifact/: artifact.toml
artifacts/mindpattern/src/: App.tsx  index.css
attached_assets/: Pasted--MVP-Build-Plan-Mental-Health-Pattern-Analysis-Tool-Pro_1780514018928.txt  Pasted-Project-Idea-Mental-Health-Pattern-Analysis-Tool-A-ment_1780512888654.txt  Pasted-You-are-working-on-my-Mental-Health-Pattern-Analysis-To_1780792411654.txt  Pasted-You-are-working-on-my-Mental-Health-Pattern-Analysis-To_1780793138619.txt  Pasted-You-are-working-on-my-Mental-Health-Pattern-Analysis-To_1780793854132.txt
lib/api-spec/: openapi.yaml
(+37 files in other folders)
